2009-04-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	* src/filterhtml.cpp (FilterHtml::FilterHtml):
	* src/filterrtf.cpp (FilterRTF::FilterRTF, FilterRTF::GetNextToken):
	* src/filterlatex.cpp
	  (FilterLatex::FilterLatex, FilterLatex::GetNextToken):
	* src/wordseg.cpp (main):
	Replace strcpy() and strcmp() calls with null string arguments with
	first character accesses.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	Replace operlapping strcpy() with memmove(), fixing valgrind warnings.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): Move global vars 'startStr', 'buff', 'gout'
	to local scope, where they are actually used.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): Move global var 'mulestr' to local scope.
	Make it just bool 'muleMode', as all its function is just that.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (InitWordSegmentation, main):
	Make the global var 'method' local and passed as argument.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h (AbsWordSeg::~AbsWordSeg): Declare d-tor as virtual,
	fixing memory leak because its derived class d-tor was not called.
	Thanks valgrind.

	* src/wordseg.cpp (InitWordSegmentation, main): Move 'delete method' to
	main(), where it's more obvious.

	* src/wordseg.cpp (ExitWordSegmentation, WordSegmentation, main):
	Make ExitWordSegmentation() and WordSegmentation() accept mere
	AbsWordSeg pointer, rather than pointer to pointer, reducing
	dereferencing steps.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix valgrind warnings about mismatched new/delete.

	* src/abswordseg.cpp (AbsWordSeg::~AbsWordSeg):
	* src/maxwordseg.cpp (MaxWordSeg::MaxWordSeg, MaxWordSeg::~MaxWordSeg):
	* src/wordseg.cpp (InitWordSegmentation, main):