@@ -1,5 +1,13 @@
 2009-04-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/maxwordseg.cpp
+	(MaxWordSeg::CreateSentence, MaxWordSeg::WordSegArea):
+	Check range of array index for IdxSep[] *before* accessing the array
+	element, rather than *after*, fixing valgrind warnings of conditional
+	jumps depending on uninitialized values.
+
+2009-04-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
 	* src/filterhtml.cpp (FilterHtml::FilterHtml):
 	* src/filterrtf.cpp (FilterRTF::FilterRTF, FilterRTF::GetNextToken):
